uploads: fix images shrinking too much on mobile.
Fix it so that when images are resized to fit the screen height, they're reduced to a minimum of
320px tall.

Fixes an issue on mobile where, if you rotated your phone to landscape mode and opened the on-screen
keyboard, then the image would become really small. This was caused by the fact that opening the
on-screen keyboard may reduce the height of the viewport, which causes the image to shrink because
it's sized based on the viewport height. This happens on Firefox for Android but not on Chrome,
since Firefox resizes the layout viewport when the keyboard is shown, while Chrome doesn't (as of 108).

https://github.com/bramus/viewport-resize-behavior/blob/main/explainer.md
https://developer.chrome.com/blog/viewport-resize-behavior/

--- a/app/components/media_asset_component/media_asset_component.scss
+++ b/app/components/media_asset_component/media_asset_component.scss
@@ -8,10 +8,12 @@
 }
 
 .media-asset-component {
+  --min-asset-height: 320px;
+
   &:not(.media-asset-component-fit-height) .media-asset-paginator {
     position: sticky;
-    top: calc((100vh + var(--header-visible-height) - var(--paginator-size)) / 2);
-    top: calc((100dvh + var(--header-visible-height) - var(--paginator-size)) / 2);
+    top: calc((max(var(--min-asset-height), 100vh)  + var(--header-visible-height) - var(--paginator-size)) / 2);
+    top: calc((max(var(--min-asset-height), 100dvh) + var(--header-visible-height) - var(--paginator-size)) / 2);
   }
 
   &:hover {
@@ -65,8 +67,8 @@
   }
 
   &.media-asset-component-fit-height {
-    max-height: calc(100vh - var(--header-visible-height));
-    max-height: calc(100dvh - var(--header-visible-height));
+    max-height: calc(max(var(--min-asset-height), 100vh)  - var(--header-visible-height));
+    max-height: calc(max(var(--min-asset-height), 100dvh) - var(--header-visible-height));
     justify-content: center;
 
     .media-asset-container {
